# erpnext_pos_controller

./: MANIFEST.in  README.md  pyproject.toml  setup.py
erpnext_pos_controller/: __init__.py  hooks.py  modules.txt
erpnext_pos_controller/api/: __init__.py  handler.py
erpnext_pos_controller/config/: desktop.py  docs.py
erpnext_pos_controller/erpnext_pos_controller/doctype/pos_controller_has_user/: pos_controller_has_user.json  pos_controller_has_user.py
erpnext_pos_controller/erpnext_pos_controller/doctype/pos_controller_item/: pos_controller_item.json
erpnext_pos_controller/erpnext_pos_controller/doctype/pos_controller_settings/: pos_controller_settings.js  pos_controller_settings.json  pos_controller_settings.py
erpnext_pos_controller/public/: build.json
erpnext_pos_controller/public/js/: pos_controller.bundle.js  pos_controller_v13.bundle.js
