[project]
name = "erpnext_pos_controller"
authors = [
    {name = "Ameen Ahmed (Level Up)", email = "kid1194@gmail.com"}
]
description = "ERPNext plugin that helps in adding some restrictions over default POS."
keywords = ["frappe", "erpnext", "pos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: JavaScript"
]
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=13.0.0",
    "erpnext>=13.0.0"
]

[project.urls]
Documentation = "https://github.com/kid1194/erpnext_pos_controller"
Source = "https://github.com/kid1194/erpnext_pos_controller"
